Fix style issues and upgrade to newer Java features where possible